--- a/partials/main.html
+++ b/partials/main.html
@@ -1,6 +1,11 @@
 
 	<div class="home-container">
         <h1 class="headline">Development<br/>& Training</h1>
-        <p class="large-content">Dan Carr is owner, lead developer, and trainer at Dan Carr Design. With 16+ years experience developing for major companies including Adobe, Kayak, and Johnson & Johnson, Dan provides services in web development, mobile (HTML5 and native iOS), and app development with JavaScript. Dan also produces training courses and tutorials, and trains professional teams of all sizes.</p>
-        <p class="small-content">Dan Carr is lead developer and trainer at Dan Carr Design. With 16+ years experience developing for major software vendors, Dan provides services in web development, mobile (HTML5 and native iOS), and app development with JavaScript.</p>
+        
+        <div class="large-content">
+        	<p>Dan Carr is owner, lead developer, and trainer for Dan Carr Design. With 16+ years experience leading projects with Adobe, Kayak, Autodesk, and others, I'm excited to provide services in web development, mobile, and app development with JavaScript. I also produce training courses and tutorials, and train professional teams of all sizes.</p>
+            <p>Please see the links above for more information.</p>
+        </div>
+        
+        <p class="small-content">Dan Carr is lead developer and trainer for Dan Carr Design. With 16+ years experience leading projects with Adobe, Kayak, Autodesk, and others, I'm excited to provide services in web development, mobile, and app development with JavaScript.</p>
 	</div>
