--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -1,6 +1,6 @@
 
         <!-- Branding -->
-        <a href="#/" class="logotype">Dan Carr</a>
+        <a href="/" class="logotype">Dan Carr</a>
         <!-- Navigation -->
         <ul class="mobilenav">
             <li ng-repeat="item in navitems">
