--- a/partials/main.html
+++ b/partials/main.html
@@ -3,8 +3,8 @@
         <h1 class="headline">Development<br/>& Training</h1>
         
         <div class="large-content">
-        	<p>Dan Carr is owner, lead developer, and trainer for Dan Carr Design. With 16+ years experience leading projects with Adobe, Kayak, Autodesk, and others, I'm excited to provide services in web development, mobile, and app development with JavaScript. I also produce training courses and tutorials, and train professional teams of all sizes.</p>
-            <p>Please see the links above for more information.</p>
+        	<p>Dan Carr is lead developer and trainer for Dan Carr Design. With 16+ years experience leading projects with Adobe, Kayak, Autodesk, and others, I'm excited to provide services in web development, mobile, and app development with JavaScript. I also produce training courses and tutorials, and train professional teams of all sizes.</p>
+            <p>Please see the links above for resources.</p>
         </div>
         
         <p class="small-content">Dan Carr is lead developer and trainer for Dan Carr Design. With 16+ years experience leading projects with Adobe, Kayak, Autodesk, and others, I'm excited to provide services in web development, mobile, and app development with JavaScript.</p>
